# auth-system

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml
backend/.cargo/: config.toml
backend/migrations/: 20240101000000_init.sql  20240101000001_create_tables.sql
backend/src/: main.rs
backend/src/application/dto/: auth_dto.rs  credential_dto.rs  mod.rs  session_dto.rs  subject_dto.rs
backend/src/application/service/: auth_service.rs  credential_service.rs  mod.rs  passkey_service.rs  session_service.rs
backend/src/domain/: error.rs  mod.rs
backend/src/domain/model/: mod.rs  subject.rs
backend/src/domain/repository/: credential_repo.rs  mod.rs  session_repo.rs  subject_repo.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/auth/: jwt.rs  mod.rs
backend/src/infrastructure/persistence/: credential_repo_impl.rs  mod.rs  session_repo_impl.rs  subject_repo_impl.rs
backend/src/presentation/: mod.rs  rejection.rs
backend/src/presentation/handler/: auth_handler.rs  credential_handler.rs  mod.rs  passkey_handler.rs  session_handler.rs  subject_handler.rs
backend/src/presentation/middleware/: auth_extractor.rs
backend/src/presentation/router/: mod.rs
docs/: API.md  CONTRIBUTING.md  ENV.md  RUNBOOK.md
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  errors.ts
frontend/src/components/: Layout.tsx  RequireAuth.tsx
frontend/src/contexts/: AuthContext.tsx  useAuth.ts  (+1 more)
scripts/: smoke-test.sh
(+6 files in other folders)
